tests/baselines/reference/parserComputedPropertyName12.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName12.ts(2,4): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName12.ts (1 errors) ====
    class C {
       [e]() { }
       ~~~
!!! error TS9002: Computed property names are not currently supported.
    }